--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-html, body{
-	background-color: whitesmoke;
+body{
+	background-color: #f5f5f5;
 	margin:  0;
 	padding: 0;
-	height:  100%;
+	min-height: 100%;
 }
 
 #container {
@@ -29,7 +29,7 @@ main{
 	margin-right: 5px;
 	margin-left: 5px;
 	border: 5px;
-	border-color: blue;
+	border-color: #00b1ff;
 	border-style: solid;
 	padding-right: 8px;
 	padding-left: 8px;
@@ -42,7 +42,7 @@ footer{
 	bottom: 0;
 	width: 100%;
 	height:  80px;
-	background:whitesmoke;
+	background-color: white;
 	font-family: Courier New;
 	text-align: center;
 }
@@ -67,17 +67,65 @@ h1{
 	color: #00b1ff;
 }
 
-img{
-	width: 50%;
-}
-
 section{
 	text-align: justify;
 }
 
-.PageName{
+img{
+	width: 50%;
+}
+
+.page-name{
 	font-style: normal;
 	font-family: Courier New;
 	color: #00b1ff;
 	text-decoration-line: none;
+}
+
+.img-row{
+	display:  flex;
+}
+
+.img-column{
+	flex:  50%;
+	padding: 5px;
+}
+
+.toggle-dark-mode{
+	width: 35px;
+	height: 35px;
+	background-color: #eee8e1;
+	position: absolute;
+	top: 120px;
+	right: 20px;
+	display: grid;
+	place-items: center;
+	border-radius: 50%;
+	cursor:  pointer;
+}
+
+.toggle-dark-mode-button i{
+	font-size:  25px;
+	color:  #777;
+}
+
+.dark-mode{
+	background-color: #353535;
+	color:  #eeeeee;
+}
+
+main.dark-mode{
+	background-color: #262626;
+}
+
+header.dark-mode{
+	background-color: #262626;
+}
+
+footer.dark-mode{
+	background-color: #262626;
+}
+
+.toggle-dark-mode.dark-mode{
+	background-color: #151515;
 }
