--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,17 @@ iframe{
 }
 
 table{
-	height:  150px;
-	width:  150px;
 	text-align: center;
 }
 
 table, th, td{
 	border:  1px solid blue;
+}
+
+td{
+	width: 50px;
+	height: 50px;
+	background-color: antiquewhite;
 }
 
 h1{
@@ -78,8 +82,8 @@ img{
 .page-name{
 	font-style: normal;
 	font-family: Courier New;
-	color: #00b1ff;
-	text-decoration-line: none;
+	color: #00b1ff !important;
+	text-decoration-line: none !important;
 }
 
 .img-row{
@@ -128,4 +132,16 @@ footer.dark-mode{
 
 .toggle-dark-mode.dark-mode{
 	background-color: #151515;
+}
+
+a{
+	text-decoration-line: none;
+}
+
+a:hover{
+	text-decoration-line: underline;
+}
+
+a.dark-mode{
+	color: #d445e4;
 }
