--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap');
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+}
+
 body{
-	background-color: #f5f5f5;
+	background-color: #ffffff;
 	margin:  0;
 	padding: 0;
 	min-height: 100%;
+	font-size: 100%;
+}
+
+.top{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-end;
+	gap: 25px;
+	font-weight: bold;
+	font-size: 20px;
+	font-family: 'Roboto', sans-serif;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+.intro_main{
+	display:flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 70px;
+	margin: 120px;
+}
+
+.download_resume{
+	width: 208px;
+	height: 47px;
+	border-radius: 2px;
+	background: var(--primary, #FF6464);
+	text-align: center;
+	font-weight: bold;
+	color: #FFF;
+	margin-top: 30px;
+	float: left;
 }
 
 #container {
@@ -100,12 +143,10 @@ img{
 }
 
 .toggle-dark-mode{
-	width: 35px;
-	height: 35px;
+	width: 20px;
+	height: 20px;
 	background-color: #eee8e1;
-	position: absolute;
-	top: 120px;
-	right: 20px;
+
 	display: grid;
 	place-items: center;
 	border-radius: 50%;
@@ -113,7 +154,11 @@ img{
 }
 
 .toggle-dark-mode i{
-	font-size:  25px;
+	font-size:  20px;
+	color:  #202020;
+}
+
+.toggle-dark-mode.dark-mode i{
 	color:  #777;
 }
 
@@ -136,6 +181,10 @@ footer.dark-mode{
 
 .toggle-dark-mode.dark-mode{
 	background-color: #151515;
+}
+
+.top{
+	text-align: right;
 }
 
 section p{
