--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ header{
 	border-radius: 2px;
 	background: var(--primary, #FF6464);
 	text-align: center;
-	font-weight: bold;
+	font-size: 18px;
+	font-weight: 700;
 	color: #FFF;
 	margin-top: 30px;
 	float: left;
@@ -69,7 +70,7 @@ header{
 	align-items: center;
 }
 
-.recent_posts_title{
+.section_title{
 	font-size: 20px;
 	font-weight: 300;
 }
@@ -77,6 +78,11 @@ header{
 .view_all{
 	color: #00A8CC;
 	text-align: right;
+}
+
+.view_all:hover{
+	text-decoration-color: #00A8CC;
+	text-decoration-line: underline;
 }
 
 .recent_posts{
@@ -98,38 +104,50 @@ header{
 	margin-bottom: 20px;
 }
 
-#container {
+.featured_works_main{
+	background-color: white;
+	padding: 20px;
+	padding-left: 120px;
+	padding-right: 120px;
+}
+
+.featured_work_item{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: top;
+	gap: 20px;
+	justify-content: left;
+}
+
+.featured_work_item > a > img{
+	max-height: 200px;
+	width: auto;
+	border-radius: 8px;
+}
+
+a > img:hover {
+	box-shadow: 0 0 3px 2px rgba(0, 140, 186, 0.5);
+}
+
+.container {
     min-height:100%;
     position:relative;
 }
 
-#main {
-	padding: 0px;
+footer {
 	padding-bottom: 80px;
 	min-height: 100%;
 }
 
-main{
-	background-color: white;
-	margin-top: 20px;
-	margin-right: 5px;
-	margin-left: 5px;
-	border: 5px;
-	border-color: #00b1ff;
-	border-style: solid;
-	padding-right: 8px;
-	padding-left: 8px;
-	padding-top: 0px;
-	padding-bottom: 5px;
-}
-
-footer{
+.footer_main {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
 	height:  80px;
 	background-color: white;
-	font-family: Courier New;
+	font-family: 'Roboto', sans-serif;
 	text-align: center;
 }
 
@@ -170,6 +188,9 @@ img{
 }
 
 .page-name{
+	padding-top: 10px;
+	margin-bottom: 10px;
+	font-size: 20px;
 	font-style: normal;
 	font-family: Courier New;
 	color: #00b1ff !important;
@@ -235,6 +256,7 @@ section p{
 }
 
 a{
+	color: black;
 	font-family: 'Roboto', sans-serif;
 	text-decoration-line: none;
 }
@@ -249,4 +271,8 @@ a.dark-mode{
 
 td.dark-mode{
 	background-color: #151515;
+}
+
+hr{
+	border: 1px solid #E0E0E0;
 }
