--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header{
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: center;
 	gap: 70px;
 	margin: 120px;
 }
@@ -113,6 +114,13 @@ header{
 	margin-bottom: 20px;
 }
 
+main.post{
+	margin-left: 120px;
+	margin-right: 120px;
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
 .featured-works-main{
 	background-color: white;
 	padding: 20px;
@@ -169,6 +177,11 @@ footer{
 	font-size: 18px;
 }
 
+nav{
+	margin-left: 40px;
+	margin-bottom: 20px;
+}
+
 iframe{
 	width:  100%;
 	height:  600px;
@@ -193,6 +206,7 @@ section{
 }
 
 h1{
+	margin-bottom: 20px;
 	font-family: Courier New;
 	color: #00b1ff;
 }
@@ -201,8 +215,24 @@ h2{
 	text-align: left;
 }
 
+main.post h2{
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+
+main.post p{
+	margin-top: 5px;
+	margin-bottom: 10px;
+	font-size: 18px;
+}
+
 img{
 	width: 50%;
+}
+
+figcaption{
+	text-align: right;
+	margin-bottom: 15px;
 }
 
 .page-name{
